[package]
name = "oxideflow"
version = "0.1.0"
edition = "2021"
authors = ["Sairam Sukumar"]
description = "A log file analyzer CLI with filtering and structured output"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
[profile.release]
opt-level = 3
lto = true